config file integrated

--- a/ludalo.config
+++ b/ludalo.config
@@ -1,6 +1,8 @@
 # ludalo config 
 # this is TOML syntax
 
+name = "huhu"
+
 
 # settings for collector/and to connect to collectors
 [collector]
@@ -8,8 +10,10 @@
 	hosts = [
 		"localhost"
 	]
-	maxentries = 256  # number of entries in the queue between collector and inserter
-	port = 1234       # port for RPC
+	collectorPath = "/tmp/collector"
+	maxEntries = 256	# number of entries in the queue between collector and inserter
+	port = 1234       	# port for RPC
+	interval = 10		# time in seconds to wait between samples		
 
 # settings to connect to Mongo/TokuMX DB
 [database]
