new config option for location of collector installation of collector on target host with scp golint run + fixes

--- a/ludalo.config
+++ b/ludalo.config
@@ -7,7 +7,8 @@
 	hosts = [
 		"localhost"
 	]
-	collectorPath = "/tmp/collector"
+	localcollectorPath = "/tmp/collector"
+	collectorPath = "/var/tmp/collector"
 	maxEntries = 256	# number of entries in the queue between collector and inserter
 	port = 1234       	# port for RPC
 	interval = 10		# time in seconds to wait between samples		
