new config option for timestamp "snap" = rounding cleanups new RPC function to inquire server type

--- a/ludalo.config
+++ b/ludalo.config
@@ -12,6 +12,7 @@
 	maxEntries = 256	# number of entries in the queue between collector and inserter
 	port = 1234       	# port for RPC
 	interval = 10		# time in seconds to wait between samples		
+	SnapInterval = 5	# rounding interval for timestamps in database
 
 # settings to connect to Mongo/TokuMX DB
 [database]
