finish oss/mds separation fix mds

--- a/ludalo.config
+++ b/ludalo.config
@@ -4,7 +4,10 @@
 # settings for collector/and to connect to collectors
 [collector]
 # list of server to start collector on and query
-	hosts = [
+	OSS = [
+		"localhost"
+	]
+	MDS = [
 		"localhost"
 	]
 	localcollectorPath = "/tmp/collector"
@@ -18,3 +21,9 @@
 [database]
 	server = "localhost"
 	name = "ludalo"
+
+# settings for mapping of nids to hostnames
+[nidmapping]
+	hostfile = "/etc/hosts"
+	pattern = "(.*)(-ib)"
+	replace = "$1"
