with mongo update

--- a/batchcollector_alps/batchcollector_alps.conf
+++ b/batchcollector_alps/batchcollector_alps.conf
@@ -1,3 +1,6 @@
 # WatchDirectory = "/var/opt/cray/log/p0-current/alps"
-WatchDirectory = "link"
+WatchDirectory = "testdata"
 FilePrefix = "apsched-c2-0c0s0n1-"
+MongoServer = "localhost"
+MongoDB = "testdb"
+Collection = "jobs"
