added tests for torque

--- a/batchcollector/makefile
+++ b/batchcollector/makefile
@@ -5,10 +5,10 @@ GIT:=$(shell git rev-parse HEAD)
 all: Batchcollector_alps Batchcollector_torque
 
 Batchcollector_alps:
-	go build -o batchcollector_alps -ldflags "-X main.BuildID=$(BUILDID) -X main.Hash=$(GIT)" -tags alps
+	go build -o batchcollector_alps -ldflags "-X main.BuildID=$(BUILDID) -X main.Hash=$(GIT) -w" -tags alps
 
 Batchcollector_torque:
-	go build -o batchcollector_torque -ldflags "-X main.BuildID=$(BUILDID) -X main.Hash=$(GIT)" 
+	go build -o batchcollector_torque -ldflags "-X main.BuildID=$(BUILDID) -X main.Hash=$(GIT) -w" 
 
 clean:
 	go clean 
